own contributios and authentications
